Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextUndefinedField.quorum
class Main
    text v = undefined
    action Main
        Test(v)
    end

    action Test(text var)
        if var = undefined
            output "passed"
        end
    end
end
