Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextUndefinedField.quorum
class Main
    Object v = undefined
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
